--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Chat Bot</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chatbot</title>
     <script type="module" src="index.js"></script>
   </head>
   <body>
-
-
+  <chatbot-window></chatbot-window>
 
   </body>
 </html>
