--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="index.js"></script>
   </head>
   <body>
-  <chatbot-window></chatbot-window>
+  <chat-window></chat-window>
 
   </body>
 </html>
